[project]
name = "diatune-safe-bot"
version = "0.1.0"
description = "Open-source safe recommendation platform for type 1 diabetes profile tuning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "python-telegram-bot>=22.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest-asyncio>=1.2.0",
  "pytest>=8.4.0",
]

[project.scripts]
diatune-safe = "diatune_safe.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
